<resources>
    <string name="app_name">Penide_Estefania_examen2tDual</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Select Game</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_guess">Guess the word</string>
    <string name="menu_tictactoe">Tic Tac Toe</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_ready">Get ready to...</string>
    <string name="guess_word">guess the word!!!</string>
    <string name="play">PLAY</string>
    <string name="skip">SKIP</string>
    <string name="got_it">GOT IT</string>
    <string name="end_game">END GAME</string>
    <string name="the_word_is">The word is...</string>
    <string name="you_scored">You scored...</string>
    <string name="score">Score:</string>
    <string name="winner">WINNER:</string>
    <string name="select_game">Select a game from the side menu</string>
    <string name="reset">RESET</string>
    <string name="score_title">Score</string>
    <string name="winner_title">Winner</string>
    <string name="game_finished">Game has just finished</string>
    <string name="no_words_left">There are no words left</string>

    <string-array name="words">
        <item>queen</item>
        <item>hospital</item>
        <item>basketball</item>
        <item>cat</item>
        <item>change</item>
        <item>snail</item>
        <item>soup</item>
        <item>calendar</item>
        <item>sad</item>
        <item>desk</item>
        <item>guitar</item>
        <item>home</item>
        <item>railway</item>
        <item>zebra</item>
        <item>jelly</item>
        <item>car</item>
        <item>crow</item>
        <item>trade</item>
        <item>bag</item>
        <item>roll</item>
        <item>bubble</item>
    </string-array>
</resources>